2003-12-08 Jim Garlick <garlick@llnl.gov>

    * etc/vpc.dev: allow device to be queried in a more efficient manner

    * src/device.c, src/powermand.c, src/wrappers.c: introduce poll debugging
    code and fix bugs related to poll changes.  Now we don't spin when
    reconnecting to devices.

2003-12-04 Jim Garlick <garlick@llnl.gov>

    * etc/cyclades-pm8.dev: fixed status script to not fail intermittently
    depending on breakdown of partial reads.

    * etc/cyclades-pm8.dev: device has a non-configurable inactivity
    timeout so log on and off for each command.

    * etc/baytech-rpc28-nc.dev: device has a non-configurable inactivity
    timeout so repeat login sequence before each command (it works whether
    logged in or not).
    
    * powerman.spec: add %dir entries for directories that may be inadvertantly
    created with too restrictive permissions like /usr/man/man7.

2003-12-03 Albert Chu <chu11@llnl.gov>

    * /etc/ipmipower.dev: Removed "timed out" as acceptable message to
    indicate power is off.  Power status should be unknown when there
    is a timeout.
 
2003-12-02 Jim Garlick <garlick@llnl.gov>

    * man/powerman-devices.7: Added.

2003-12-02 Albert Chu <chu11@llnl.gov>

    * etc/ipmipower.dev: Replaced "failed to connect" with "timed out" 
    and "not discovered".

2003-11-30 Jim Garlick <garlick@llnl.gov>

    * src/wrappers.[ch], src/device.[ch], src/client.[ch], powermand.c:
    Add logic to use poll() if available, or select() if not.  This gets
    around the fixed 1024 bit size of FD_SETS used with select under Linux,
    which effectively limited the maximum number of devices to under 1024.

2003-11-30 Jim Garlick <garlick@llnl.gov>

    * src/powerman.c: handle partial reads on powermand socket.
    Fixes the very occasional 'unexpected response from server' errors.

    * src/powerman.c: don't initiate connect to server until options
    have been validated (avoids 'client read returned EOF' messages