@@ -3,7 +3,7 @@
 # $Source$
 #
 specification "vpc" {
-	timeout 	120.0
+	timeout 	5.0
 #	pingperiod 	10.0
 
 	plug name { "0" "1" "2" "3" "4" "5" "6" "7" "8" 
