@@ -1,1 +1,0 @@
-pid_t pty_fork(int *ptrfdm, char *slave_name);
