@@ -1,10 +1,18 @@
 2003-12-08 Jim Garlick <garlick@llnl.gov>
 
-    * etc/vpc.dev: allow device to be queried in a more efficient manner
+    * etc/vpc.dev: implement status_all, on_all, off_all, and cycle_all
+    for efficiency.
 
     * src/device.c, src/powermand.c, src/wrappers.c: introduce poll debugging
     code and fix bugs related to poll changes.  Now we don't spin when
-    reconnecting to devices.
+    reconnecting to devices if HAVE_POLL=1.
+
+    * src/device.c: rewrite dev_post_poll() for clarity.
+
+    * src/device_pipe.c, Makefile: use openpty() from -lutil instead of local
+    pty_open.  This gets pty allocation right once and for all.
+
+    * src/pty.[ch]: removed.
 
 2003-12-04 Jim Garlick <garlick@llnl.gov>
 
